cmake_minimum_required(VERSION 3.21)
project(leetcode_clion)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode_clion 往期周赛/23.cpp)
add_executable(109 往期周赛/109.cpp)
add_executable(6335 往期周赛/6335.cpp)
add_executable(6329 往期周赛/6329.cpp)
add_executable(6362 往期周赛/6362.cpp)
add_executable(6363 往期周赛/6363.cpp)
add_executable(6333 往期周赛/6333.cpp)
add_executable(6350 往期周赛/6350.cpp)
add_executable(6375 往期周赛/6375.cpp)
add_executable(2500 往期周赛/2500.cpp)
add_executable(6953 往期周赛/6953.cpp)
add_executable(6939 往期周赛/6939.cpp)
add_executable(6450 往期周赛/6450.cpp)
add_executable(7005 往期周赛/7005.cpp)
add_executable(10084 往期周赛/10084.cpp)
add_executable(884 往期周赛/884.cpp)
add_executable(100106 往期周赛/100106.cpp)
add_executable(100097 往期周赛/100097.cpp)
add_executable(1000094 往期周赛/100094.cpp )
add_executable(1000104 往期周赛/1000104.cpp)
add_executable(100111 往期周赛/100111.cpp)
add_executable(100102 往期周赛/100102.cpp)
add_executable(100107 往期周赛/100107.cpp)
add_executable(134 往期周赛/134.cpp)
add_executable(1462 往期周赛/1462.cpp)
add_executable(2552 往期周赛/2552.cpp)
add_executable(1971 往期周赛/1971.cpp)
add_executable(100125 往期周赛/100125.cpp)
add_executable(100128 往期周赛/100128.cpp)
add_executable(100117 往期周赛/100117.cpp)
add_executable(test test/test.cpp)
add_executable(100139 往期周赛/100139.cpp)
add_executable(100134 往期周赛/100134.cpp)
add_executable(test2 test/test2.cpp)
add_executable(test3 test/test3.cpp)
add_executable(100153 往期周赛/100153.cpp)
add_executable(100130 往期周赛/100130.cpp)
add_executable(100152 往期周赛/100152.cpp)
add_executable(100147 往期周赛/100147.cpp)
add_executable(100155 往期周赛/100137.cpp)
add_executable(2 376场周赛/2.cpp)
add_executable(3 376场周赛/3.cpp)
add_executable(test4 test/test4.cpp)
add_executable(100194 123场双周赛/100194.cpp)
add_executable(100183 123场双周赛/100183.cpp)
add_executable(100204 383场周赛/100204.cpp)
add_executable(100189 383场周赛/100189.cpp)
add_executable(100221 124/100220.cpp)
add_executable(100220 124/100220.cpp)
add_executable(100229 385/100229.cpp)
add_executable(100217 385/100217.cpp)
add_executable(100223 388/100223.cpp)
add_executable(126_1 126/126_1.cpp)
add_executable(126_2 126/126_2.cpp)
add_executable(126_3 126/126_3.cpp)
add_executable(126_4 126/126_4.cpp)
add_executable(389_1 389/389_1.cpp)
add_executable(389_2 389/389_2.cpp)
add_executable(389_3 389/389_3.cpp)
add_executable(389_4 389/389_4.cpp)
add_executable(R151708062 luogu/R151708062.cpp)
add_executable(1049 problem/1049.cpp)
add_executable(208 problem/208.cpp)
add_executable(2915 problem/2915.cpp)
add_executable(2549 problem/2549.cpp)
add_executable(474 problem/474.cpp)
add_executable(322 problem/322.cpp)
add_executable(518 problem/518.cpp)
add_executable(377 problem/377.cpp)
add_executable(2789 problem/2789.cpp)
add_executable(279 problem/279.cpp)
add_executable(399_1 399/399_1.cpp)
add_executable(399_2 399/399_2.cpp)
add_executable(399_3 399/399_3.cpp)
add_executable(399_4 399/399_4.cpp)
add_executable(8742 luogu/p8742.cpp)
add_executable(2466 problem/2466.cpp)
add_executable(2246 problem/2246.cpp)
add_executable(2320 problem/2320.cpp)
add_executable(2642 problem/2642.cpp)
add_executable(1191 problem/1191.cpp)
add_executable(918 problem/918.cpp)
add_executable(2580 problem/2580.cpp)
add_executable(1024 problem/1024.cpp)
add_executable(1997 problem/1997.cpp)
add_executable(1557 problem/1557.cpp)



















